--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "redis": "^5.9.0",
+    "stripe": "^19.3.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.1.9"
