--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,13 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "inversify": "^7.10.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "redis": "^5.9.0",
+    "reflect-metadata": "^0.2.2",
     "stripe": "^19.3.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
