--- a/backend/package.json
+++ b/backend/package.json
@@ -50,7 +50,8 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "stripe": "stripe listen --forward-to localhost:3000/api/webhook/stripe"
   },
   "author": "",
   "license": "ISC",
