--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,6 @@
-VITE_P_API_BASE_URL=http://localhost:3000/api
+VITE_P_API_BASE_URL=https://rt3bpb5j-3000.inc1.devtunnels.ms/api
 VITE_API_BASE_URL=http://localhost:3000/api
 VITE_GOOGLE_CLIENT_ID=686134845937-m984d1fi2qf11h59546p18ka7vgg8sid.apps.googleusercontent.com
 VITE_GOOGLE_CALLBACK_URL=http://localhost:3000/api/auth/google/callback
 VITE_FETCH_LOCATION_BASEURL=https://nominatim.openstreetmap.org/reverse
+NGROK_TOKEN=36dzdDy5JfKmRXdetjkDuOjrUBq_4BySwLa2vLyUJ571XW8A8
