--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
+    "framer-motion": "^12.23.26",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.544.0",
+    "path": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
@@ -31,6 +33,7 @@
     "@eslint/js": "^9.33.0",
     "@types/leaflet": "^1.9.20",
     "@types/lodash": "^4.17.20",
+    "@types/node": "^24.10.2",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/redux-persist": "^4.0.0",
