--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-query": "^5.90.16",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.26",
     "leaflet": "^1.9.4",
