--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "redis": "^5.9.0",
     "reflect-metadata": "^0.2.2",
