--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "nodemailer": "^7.0.6",
     "redis": "^5.9.0",
     "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.8.3",
     "stripe": "^19.3.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
